fix(calendar): update disabled date styling for better visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1420,6 +1420,10 @@ div[style='z-index: 1000001;'],
   @apply !bg-[#2B7F75] text-gray-0;
 }
 
+.react-calendar__tile:disabled {
+  background-color: #fff;
+}
+
 .react-calendar__tile--now {
   @apply border border-solid border-gray-950 bg-blue-200 text-gray-950;
 }
